--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html,
 body {
   height: 100%;
   width: 100%;
-  background-image: url("/Image/Budgeting\ Report\ Presentation1.jpg");
+  /* background-image: url("/Image/Budgeting\ Report\ Presentation1.jpg"); */
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -20,8 +20,11 @@ header {
   padding: 2rem;
 }
 .hdr-left {
-  font-size: xx-large;
+  font-size: 35px;
   font-weight: 600;
+  -webkit-text-stroke: 1.5px #a03131;
+  color: #fff;
+  text-shadow: 5px 3px 2px #d92b2b;
 }
 header ul {
   position: relative;
@@ -35,27 +38,19 @@ header ul {
   font-weight: 600;
   cursor: pointer;
 }
-header ul li {
-  position: relative;
+
+header ul :nth-child(1) {
+  border-bottom: 2px solid #ff4500;
 }
-header ul li::after {
-  content: "";
-  position: absolute;
-  bottom: -2px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: #ff4500;
-  visibility: hidden;
-  transform: scaleX(0);
-  transition: visibility 0s, transform 0.3s ease;
+header ul li:hover {
+  border-bottom: 2px #de0c2f;
+}
+.hdr-right {
+  color: #000;
+  font-weight: 600;
 }
 
-header ul li:hover::after {
-  visibility: visible;
-  transform: scaleX(1);
-}
-
+/* header ends here  */
 .container {
   display: flex;
   padding-left: 15vw;
@@ -69,18 +64,47 @@ header ul li:hover::after {
   font-size: 4vw;
 }
 .container span {
-  color: rgb(222, 12, 47);
+  -webkit-text-stroke: 1.5px #c63434;
+  color: #ffffff;
+  text-shadow: 5px 3px 2px #d92b2b;
+  /* color: rgb(222, 12, 47); */
 }
 .container p {
   line-height: 1.2em;
   color: gray;
+  margin-top: 2vh;
 }
 
 .container button {
   width: 130px;
-  padding: 15px 20px;
+  height: 50px;
   background: #000;
   color: #fff;
   margin-top: 3vh;
   border-radius: 10px;
+  cursor: pointer;
+  border: none;
+  box-shadow: 5px 8px 5px #ff6b6b;
+}
+button:hover {
+  background: #ff6b6b;
+}
+.wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.img {
+  height: 300px;
+  width: 400px;
+  margin-top: 150px;
+  margin-left: 90px;
+  background: #de0c2f;
+  border-radius: 30% 70% 78% 22% / 45% 27% 73% 55%;
+}
+.img img {
+  position: absolute;
+  height: 530px;
+  bottom: 140px;
+  right: 100px;
 }
