--- a/style.css
+++ b/style.css
@@ -89,6 +89,12 @@ header ul li:hover {
 button:hover {
   background: #ff6b6b;
 }
+.social i{
+  width: 40px;
+  height: 30px;
+  margin-top: 30px;
+  
+}
 .wrapper {
   display: flex;
   align-items: center;
